# work-samples

./: README.md  check_secrets.sh
badger_vision_service/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
badger_vision_service/k8s/: vision-service.yaml
badger_vision_service/src/: fmcg_blur.py  vision_service.py
badger_vision_service/tests/: bv_test_case.py  test_fmcg_blur.py  test_local_storage.py  test_s3_storage.py  test_storage.py
barcode-finder/: .dockerignore  Dockerfile  Jenkinsfile  docker-compose.yml  run
barcode-finder/src/: CMakeLists.txt  analyzer.cpp  common.h  redis_client.cpp  redis_client.h  sd_interface.h  timing.cpp  timing.h
barcode-finder/test/: run_test.sh
barcode-finder/tools/: bash_img  cp_to  create-test-json.py  get_results.py  local-test.sh  lpush  monitor.py  rpop  runSD  run_monitor  start.sh  stopSD
benchmark/: README.md  barls  benchmark.sh  generate_reports.py
benchmark/monitoring/: convert_iftop.py  cpu.sh  gpu.sh  network.sh
benchmark/plotters/: plot_bandwidth.py  plot_gpu.py  plot_pid.py  plot_signal_strength.py  plot_timings.py
benchmark/timing/: compare_timings.py  gather_timings.py  journal_timings.py  report_timings.py
benchmark/utils/: calculate_statistics.py  correct_times.py  reformat_stats.py  timing_stats.py  utils.py
customer_obfuscation/: .gitignore  Dockerfile  README.rst  docker-compose.yml  requirements.txt
harvest/: Dockerfile  README.md
path_tools/: README.md
run_test/: Dockerfile  README.md  configuration.py  run_test.py  utils.py
run_test2.7/: README.md
(+47 files in other folders)
